elephant-shed (1.3.1) UNRELEASED; urgency=medium

  * update-prometheus-sql-exporter-config: Support setting interval.
    Patch by Nicolas Dandrimont, thanks!
  * e-s-postgresql.postinst: Don't fail if logrotate file was removed.

 -- Christoph Berg <christoph.berg@credativ.de>  Fri, 07 Dec 2018 17:01:05 +0100

elephant-shed (1.3) unstable; urgency=medium

  * Start prometheus-sql-exporter-restart.timer on package installation.
  * Node exporter 0.16 renames many variables, update dashboard.
  * elephant-shed-postgresql: Stop installing custom logrotate file.
  * postgresql: Don't set waldir and data checksums by default.
  * portal: Use AuthExternal pwauth instead of the buggy authnz-pam module.
  * portal: Use HTTP_HOST instead of SSL_TLS_SNI in cockpit's CSP header.

 -- Christoph Berg <christoph.berg@credativ.de>  Fri, 07 Dec 2018 16:39:19 +0100

elephant-shed (1.2) unstable; urgency=medium

  * This release bundles a series of breaking changes:
    + Upgrade to grafana 5 and prometheus 2. (Existing monitoring data is not
      migrated.)
    + Upgrade to prometheus-node-exporter 0.15.
    + Rewrite update-prometheus-sql-exporter-config using PgCommon.pm, and
      refactor its config file handling.
  * prometheus: Use 'localhost' as job_name to bundle this machine's node and
    sql exporter results. 'sql_job' contains the postgresql-common cluster
    name now.
  * The grafana dashboard has been updated to use rate() instead of increase()
    in most panels to show values per second or minute.

 -- Christoph Berg <christoph.berg@credativ.de>  Fri, 18 May 2018 17:06:21 +0200

elephant-shed (1.1.1) unstable; urgency=medium

  [ Adrian Vondendriesch ]
  * Split prometheus exporters into own packages.

  [ Alexander Sosna ]
  * Change docs build process to sphinx
  * grafana: Fix "Dead Tuples"
  * grafana: Fix "Locks"
  * grafana: Change limits for "Next Freeze"
  * grafana: Add tool tips
