@@ -3,6 +3,8 @@ elephant-shed (1.3.1) UNRELEASED; urgency=medium
   * update-prometheus-sql-exporter-config: Support setting interval.
     Patch by Nicolas Dandrimont, thanks!
   * e-s-postgresql.postinst: Don't fail if logrotate file was removed.
+  * When building for packages.credativ.com, add dependency on
+    credativ-postgresql-keyring package.
 
  -- Christoph Berg <christoph.berg@credativ.de>  Fri, 07 Dec 2018 17:01:05 +0100
 
